--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "js-md5": "^0.7.3",
+    "koa": "^2.7.0",
+    "koa-bodyparser": "^4.2.1",
+    "koa-logger": "^3.2.0",
+    "koa-router": "^7.4.0",
     "md5": "^2.2.1",
     "ngrok": "^3.2.1",
     "node-telegram-bot-api": "^0.30.0",
@@ -22,6 +26,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/koa": "^2.0.49",
+    "@types/koa-router": "^7.0.42",
     "nodemon": "^1.19.1",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3"
